tests/baselines/reference/typeOfThisInStaticMembers4(target=es6).errors.txt
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers4.ts(3,16): error TS2334: 'this' cannot be referenced in a static property initializer.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers4.ts(8,16): error TS2334: 'this' cannot be referenced in a static property initializer.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers4.ts(9,16): error TS2338: 'super' property access is permitted only in a constructor, member function, or member accessor of a derived class.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers4.ts(9,26): error TS2334: 'this' cannot be referenced in a static property initializer.


==== tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers4.ts (4 errors) ====
    class C {
        static a = 1;
        static b = this.a + 1;
                   ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
    }
    
    class D extends C {
        static c = 2;
        static d = this.c + 1;
                   ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
        static e = super.a + this.c + 1;
                   ~~~~~
!!! error TS2338: 'super' property access is permitted only in a constructor, member function, or member accessor of a derived class.
                             ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
    }
    